--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-element-behavior.html
@@ -32,8 +32,8 @@
             $(this.$.panel).addClass("hidden");
         },
 
-        _showDialog : function() {
-            this.querySelector("alexandria-dialog-container").open();
+        _showDialogBox : function() {
+            this.querySelector("alexandria-dialog-box").open();
         },
 
         _navigate : function(e) {
