--- a/alexandria/activity-elements-activity/src/widgets/alexandria-dialog-box.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-dialog-box.html
@@ -10,12 +10,12 @@
 <link rel="import" href="../../lib/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../../lib/iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="_common/alexandria-configuration-behavior.html">
-<link rel="import" href="_common/alexandria-dialog-behavior.html">
+<link rel="import" href="_common/alexandria-dialog-box-behavior.html">
 
-<script src="alexandriadialogcontainer/requester.js"></script>
-<script src="alexandriadialogcontainer/notifier-listener.js"></script>
+<script src="alexandriadialogbox/requester.js"></script>
+<script src="alexandriadialogbox/notifier-listener.js"></script>
 
-<dom-module id="alexandria-dialog-container">
+<dom-module id="alexandria-dialog-box">
 
     <template>
         <paper-dialog id="dialog" entry-animation="scale-up-animation"
@@ -28,7 +28,10 @@
                     <div class="label flex">[[_label]]</div>
                     <paper-icon-button icon="close" on-tap="close"></paper-icon-button>
                 </div>
-                <div id="dialogContent"></div>
+                <div class$="toolbar-visible-[[_toolbarVisible]]" id="displayContent"></div>
+                <div class="toolbar layout horizontal center end-justified" hidden$="[[!_toolbarVisible]]">
+                    <paper-button on-tap="accept">[[Accept]]</paper-button>
+                </div>
             </div>
         </paper-dialog>
     </template>
@@ -63,18 +66,29 @@
         :host paper-dialog .header .label {
             font-size: 12pt;
         }
-        :host paper-dialog #dialogContent {
+        :host paper-dialog #displayContent {
             border: 0;
             overflow: auto;
             width: 100%;
             height: calc(100% - 51px);
             border-radius: 2px;
         }
+        :host paper-dialog #displayContent.toolbar-visible-true {
+            height: calc(100% - 102px);
+        }
+        :host paper-dialog .toolbar {
+            height: 50px;
+            border-top: 1px solid #ddd;
+        }
+        :host paper-dialog .toolbar paper-button {
+            padding: 5px;
+            margin-right: 15px;
+        }
     </style>
 
     <script>
 
-        const AlexandriaDialogContainerDictionary = {
+        const AlexandriaDialogBoxDictionary = {
             es: {
                 Loading: "cargando diálogo..."
             },
@@ -84,15 +98,15 @@
         };
 
         Polymer({
-            is: 'alexandria-dialog-container',
+            is: 'alexandria-dialog-box',
 
             behaviors: [ CottonBehaviors.CarrierBehavior,
                 CottonBehaviors.PushBehavior,
                 CottonBehaviors.TranslatorBehavior,
-                AlexandriaDialogContainerBehaviors.Requester,
-                AlexandriaDialogContainerBehaviors.NotifierListener,
+                AlexandriaDialogBoxBehaviors.Requester,
+                AlexandriaDialogBoxBehaviors.NotifierListener,
                 AlexandriaBehaviors.ConfigurationBehavior,
-                AlexandriaBehaviors.DialogBehavior,
+                AlexandriaBehaviors.DialogBoxBehavior,
                 Polymer.IronResizableBehavior ],
 
             properties : {
@@ -101,25 +115,31 @@
             },
 
             attached : function() {
-                this.translate(AlexandriaDialogContainerDictionary);
+                this.translate(AlexandriaDialogBoxDictionary);
+                this.translate(AlexandriaBehaviors.DialogBoxBehavior.Dictionary);
                 this.listenToDisplay();
             },
 
-            _refreshDialog : function(dialog) {
-                this._label = dialog.label;
-                this._width = dialog.width;
-                this._height = dialog.height;
-                this._type = dialog.type;
+            _refreshDisplay : function(display) {
+                this._label = display.label;
+                this._type = display.type;
                 this._createZombie();
             },
 
+            _refreshSettings : function(settings) {
+                this._width = settings.width;
+                this._height = settings.height;
+                this._position = settings.position;
+                this._toolbarVisible = settings.acceptButton;
+            },
+
             _createZombie : function() {
-                this.$.dialogContent.innerHTML = "";
+                this.$.displayContent.innerHTML = "";
                 var zombie = document.createElement("cotton-zombie");
                 zombie.setAttribute("display", this._type);
                 zombie.setAttribute("widget", this._type);
                 zombie.setAttribute("object", this.display.id);
-                this.$.dialogContent.appendChild(zombie);
+                this.$.displayContent.appendChild(zombie);
             }
 
         });
