--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
@@ -9,7 +9,7 @@
 <link rel="import" href="alexandria-panel-custom-view.html">
 <link rel="import" href="alexandria-panel-catalog-view.html">
 <link rel="import" href="alexandria-panel-display-view.html">
-<link rel="import" href="alexandria-dialog-container.html">
+<link rel="import" href="alexandria-dialog-box.html">
 <link rel="import" href="_common/alexandria-breadcrumbs-behavior.html">
 <link rel="import" href="_common/alexandria-element-behavior.html">
 
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
-        <cotton-zombie display="AlexandriaDialogContainer" widget="AlexandriaDialogContainer"></cotton-zombie>
+        <cotton-zombie display="AlexandriaDialogBox" widget="AlexandriaDialogBox"></cotton-zombie>
     </template>
 
     <style>
