--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-embedded-dialog.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-embedded-dialog.html
@@ -20,7 +20,7 @@
             behaviors: [ AlexandriaBehaviors.StampBehavior ],
 
             _render : function() {
-                if (this.$.layer.querySelectorAll("cotton-zombie").length > 0) return;
+                this._removeZombieLayer();
                 var type = this.stamp.properties.displayType;
                 var id = this.stamp.item + this.stamp.properties.displayType;
                 var rendered = this.$.layer.innerHTML != "";
