--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-rating.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-rating.html
@@ -7,7 +7,7 @@
     <template>
         <paper-rating class$="rating [[stamp.classes]]" icon$="[[stamp.properties.icon]]"
                       rating$="[[stamp.value]]" disabled style$="[[_style]]"
-                      hidden$="[[!stamp.value.length]]"></paper-rating>
+                      hidden$="[[!stamp.value.length]]" max="[[stamp.properties.max]]" on-tap="_save"></paper-rating>
     </template>
 
     <style>
@@ -16,7 +16,13 @@
     <script>
         Polymer({
             is: 'alexandria-stamp-rating',
-            behaviors: [ AlexandriaBehaviors.StampBehavior ]
+            behaviors: [ AlexandriaBehaviors.StampBehavior ],
+
+            _save : function(e) {
+                if (!this.stamp.editable) return;
+                var value = this.querySelector("paper-rating").rating;
+                this.fire("save-item", { stamp: this.stamp.name, item: this.stamp.item, value: value });
+            }
         });
     </script>
 
