--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-temporal-catalog-range.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-temporal-catalog-range.html
@@ -18,7 +18,7 @@
             behaviors: [ AlexandriaBehaviors.StampBehavior ],
 
             _render : function() {
-                if (this.$.layer.querySelectorAll("cotton-zombie").length > 0) return;
+                this._removeZombieLayer();
                 var id = this.stamp.item + this.stamp.name;
                 var rendered = this.$.layer.innerHTML != "";
                 if (rendered) return;
