--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-list-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-list-view.html
@@ -29,6 +29,7 @@
                       on-select-sorting="_selectSorting"
                       on-stamps-ready="_renderExpandedPictures"
                       on-open-stamp-dialog="_openStampDialog"
+                      on-open-stamp-catalog="_openStampCatalog"
                       on-execute-stamp-task="_executeStampTask"
                       on-navigate-catalog="_navigateCatalog"
                       on-open-item="_openItem"
@@ -159,6 +160,10 @@
 
             _openStampDialog : function(e) {
                 this.openItemDialogOperation(e.detail);
+            },
+
+            _openStampCatalog : function(e) {
+                this.openItemCatalogOperation(e.detail);
             },
 
             _executeStampTask : function(e) {
