--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-list-view.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog-list-view.html
@@ -19,6 +19,7 @@
                       empty-message="[[_view.emptyMessage]]"
                       can-search="[[_view.canSearch]]"
                       can-create-clusters="[[_view.canCreateClusters]]"
+                      selection-enabled-by-default="[[_view.selectionEnabledByDefault]]"
                       cluster-list="[[_view.clusterList]]"
                       page-size="[[_pageSize]]"
                       item-list="[[_itemList]]"
