--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-dialog-box-behavior.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-dialog-box-behavior.html
@@ -18,37 +18,26 @@
             _width : { type: Number, value: function() { return 100; } },
             _height : { type: Number, value: function() { return 100; } },
             _position : { type: Object, value: function() { return null; } },
-            _toolbarVisible : { type: Boolean, value: function() { return false; } }
+            _toolbarVisible : { type: Boolean, value: function() { return false; } },
+            _resized : Boolean
         },
 
-        listeners: { 'iron-resize': '_fitDialog' },
+//        listeners: { 'iron-resize': '_resize' },
 
         _resize : function() {
-            if (this._position != null) this._updatePosition();
-            this._fitDialog();
-        },
-
-        _fitDialog : function() {
-            var style = "";
-
-            if (this._width != 100) {
-                var width = $(window).width();
-                style += ";width:" + this._width + "%;margin-left:" + ((width-(width*(this._width / 100)))/2) + "px;";
-            }
-            else style += ";width:calc(100% - 100px)";
-
-            if (this._height != 100) {
-                var height = $(window).height();
-                style += ";height:" + this._height + "%;margin-top:" + ((height - (height * (this._height / 100))) / 2) + "px;";
-            }
-            else style += ";height:calc(100% - 100px)";
-
-            this.$.dialog.style.cssText += style;
+            this._updateSize();
+            if (this._position != null) this._fitToTrigger();
         },
 
         open : function() {
-            this._fitDialog();
-            this.$.dialog.open();
+            if (this.$.dialog.opened) this.close();
+            this._addClasses();
+            var dialog = this.$.dialog;
+            dialog.withBackdrop = this._position == null;
+            dialog.entryAnimation = this._position == null ? "scale-up-animation" : "fade-in-animation";
+            dialog.resizerShouldNotify(false);
+            dialog.open();
+            window.setTimeout(() => this._resize(), 10);
         },
 
         close : function() {
@@ -56,6 +45,7 @@
         },
 
         _overlayOpened : function(e) {
+            if (this._position != null) return;
             var dialog = e.target;
             var overlay = dialog.backdropElement;
 
@@ -66,6 +56,7 @@
         },
 
         _overlayClosed : function(e) {
+            this._resized = false;
             this._overlayFixed = false;
         },
 
@@ -73,16 +64,55 @@
             this.close();
         },
 
-        _updatePosition : function() {
+        _updateSize : function() {
+            var style = this.$.dialog.style;
+
+            if (this._width != 100) {
+                var width = $(window).width();
+                style.minWidth = this._width + "%";
+                style.width = this._width + "%";
+                style.marginLeft = ((width-(width*(this._width / 100)))/2) + "px";
+                style.left = "0px";
+            }
+            else {
+                style.minWidth = "calc(100% - 100px)";
+                style.width = "calc(100% - 100px)";
+                style.left = "0px";
+            }
+
+            if (this._height != 100) {
+                var height = $(window).height();
+                style.minHeight = this._height + "%";
+                style.height = this._height + "%";
+                style.marginTop = ((height - (height * (this._height / 100))) / 2) + "px";
+                style.top = "0px";
+            }
+            else {
+                style.minHeight = "calc(100% - 100px)";
+                style.height = "calc(100% - 100px)";
+                style.top = "0px";
+            }
+        },
+
+        _fitToTrigger : function() {
             var dialog = this.$.dialog;
+            dialog.style.marginLeft = 0;
+            dialog.style.marginTop = "25px";
             var left = this._position.left;
             var top = this._position.top;
             var windowWidth = $(window).width();
             var dialogWidth = $(dialog).width();
-            var position = left > windowWidth ? "right" : ((left + $(dialog).width()) > windowWidth ? "center" : "left");
+            var position = left + dialogWidth > windowWidth ? "right" : ((left + dialogWidth/2) > windowWidth ? "center" : "left");
             left = position === "left" ? left : left - (position === "center" ? dialogWidth/2 : dialogWidth);
             dialog.style.top = (top + 5) + "px";
             dialog.style.left = (left + 3) + "px";
+        },
+
+        _addClasses : function() {
+            var dialog = $(this.$.dialog);
+            dialog.removeClass("fit-body");
+            dialog.removeClass("fit-trigger");
+            dialog.addClass(this._position != null ? "fit-trigger" : "fit-body");
         }
 
     };
