--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-preview-operation.html
@@ -16,6 +16,7 @@
         <div class="container">
             <alexandria-operation-trigger title="[[_title]]" icon="[[stamp.properties.alexandriaIcon]]"
                                           styles="[[_style]]" mode="[[stamp.properties.mode]]"
+                                          color="[[stamp.properties.drawingColor]]"
                                           on-execute="_preview"></alexandria-operation-trigger>
         </div>
         <div id="dialogContainer" class="alexandria-stamp-preview-operation-0">
