--- a/alexandria/activity-elements-activity/src/widgets/_common/alexandria-operation-trigger.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/alexandria-operation-trigger.html
@@ -8,10 +8,10 @@
 
     <template>
         <div class$="mode [[mode]]">
-            <paper-icon-button style$="color:[[_color]];" class="option Icon" id="iconOperation" icon="[[icon]]" title="[[_title]]" on-tap="_execute"></paper-icon-button>
-            <paper-button style$="color:[[_color]];" class="option Button" on-tap="_execute">[[_title]]</paper-button>
-            <a style$="color:[[_color]];" class="option Link" title="[[_title]]" on-tap="_execute">[[_title]]</a>
-            <cotton-chip style$="color:[[_color]];" class="option Chip" text="[[_title]]" icon="[[icon]]" on-tap="_execute"></cotton-chip>
+            <paper-icon-button style$="background-color:[[_color]];" class="option Icon" id="iconOperation" icon="[[icon]]" title="[[_title]]" on-tap="_execute"></paper-icon-button>
+            <paper-button style$="background-color:[[_color]];" class="option Button" on-tap="_execute">[[_title]]</paper-button>
+            <a style$="background-color:[[_color]];" class="option Link" title="[[_title]]" on-tap="_execute">[[_title]]</a>
+            <cotton-chip style$="background-color:[[_color]];" class="option Chip" text="[[_title]]" icon="[[icon]]" on-tap="_execute"></cotton-chip>
         </div>
     </template>
 
@@ -67,6 +67,7 @@
                 icon : String,
                 styles : String,
                 mode : String,
+                color: { type: String, observer: "_fillColor" },
                 _color: String
             },
 
@@ -86,14 +87,7 @@
 
             _fillColor : function() {
                 var defaultColor = getComputedStyle(document.body).getPropertyValue('--default-primary-color');
-                var drawingColor = this._drawingColor();
-                this._color = drawingColor != null ? drawingColor : defaultColor;
-            },
-
-            _drawingColor : function() {
-                if (this.stamp == null) return null;
-                if (this.stamp.properties == null) return null;
-                return this.stamp.properties.drawingColor != "" ? this.stamp.properties.drawingColor : null;
+                this._color = this.color != null && this.color != "" ? this.color : defaultColor;
             }
 
         });
