--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-external-dialog-operation.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-open-external-dialog-operation.html
@@ -11,7 +11,7 @@
     <template>
         <alexandria-operation-trigger title="[[stamp.label]]" on-execute="_openDialog"
                                       icon="[[stamp.properties.alexandriaIcon]]"
-                                      mode="[[stamp.properties.mode]]"
+                                      mode="[[stamp.properties.mode]]" color="[[stamp.properties.drawingColor]]"
                                       style$="[[_style]]"></alexandria-operation-trigger>
 
         <paper-dialog id="dialog" entry-animation="scale-up-animation"
