--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../../lib/cotton-carrier/cotton-carrier-behavior.html">
 <link rel="import" href="../../lib/cotton-zombie/cotton-zombie.html">
 <link rel="import" href="../../lib/cotton-translator/cotton-translator-behavior.html">
+<link rel="import" href="../../lib/paper-toast/paper-toast.html">
 <link rel="import" href="_common/catalog/alexandria-catalog-grouping-list.html">
 <link rel="import" href="alexandria-catalog-view-list.html">
 <link rel="import" href="alexandria-dialog-box.html">
@@ -35,6 +36,7 @@
         </div>
         <div id="panel" name="panel" class="layout vertical flex hidden" style="height:calc(100% - 60px);"></div>
         <cotton-zombie display="AlexandriaDialogBox" widget="AlexandriaDialogBox"></cotton-zombie>
+        <paper-toast class="fit-bottom operation-message" text="[[_operationMessage]]"></paper-toast>
         <paper-dialog id="groupingsDialog" no-overlap>
             <h2>[[ShowGroupings]]</h2>
             <alexandria-catalog-grouping-list hidden="[[_hideGroupings]]"
