--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-title.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/stamps/alexandria-stamp-title.html
@@ -12,6 +12,7 @@
     <style>
         :host .title {
             font-size: 11pt !important;
+            @apply(alexandria-stamp-title-)
         }
         :host .editable_true {
             margin-top: -1px;
